--- a/src/App.EndPoints.UI/appsettings.json
+++ b/src/App.EndPoints.UI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDbConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ZoodKarDb"
+  }
 }
