--- a/src/App.Infrastructures.Repository.Ef/App.Infrastructures.Repository.Ef.csproj
+++ b/src/App.Infrastructures.Repository.Ef/App.Infrastructures.Repository.Ef.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\App.Domain.Core\App.Domain.Core.csproj" />
+    <ProjectReference Include="..\App.Infrastructures.Database.SqlServer\App.Infrastructures.Database.SqlServer.csproj" />
+  </ItemGroup>
+
 </Project>
