--- a/src/App.EndPoints.UI/App.EndPoints.UI.csproj
+++ b/src/App.EndPoints.UI/App.EndPoints.UI.csproj
@@ -25,11 +25,12 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.7" />
+		<PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+		<PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Areas\Admin\Data\" />
-	  <Folder Include="Areas\Admin\Models\" />
 	</ItemGroup>
 
 </Project>
