--- a/src/App.Infrastructures.Repository.Ef/App.Infrastructures.Repository.Ef.csproj
+++ b/src/App.Infrastructures.Repository.Ef/App.Infrastructures.Repository.Ef.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\App.Infrastructures.Database.SqlServer\App.Infrastructures.Database.SqlServer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UploadFile\" />
+  </ItemGroup>
+
 </Project>
